# simple_filters

./: .gitignore  CMakeLists.txt  README.md  build.bash  cat.bash  edit.bash  package.xml  run.bash
config/: filters.param.yaml  simple_filters.param.yaml
include/: core.hpp
include/filters/: core.hpp
include/simple_filters/: core.hpp
launch/: derivative.launch.py  simple_filters.launch.py
src/: core.cpp
src/average/: core.cpp  main.cpp  node.cpp
src/caster/: main.cpp
src/core/: core.cpp
src/derivative/: main.cpp
src/distributed/: main.cpp
src/median/: core.cpp  main.cpp  node.cpp
src/standard_deviation/: main.cpp
